--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<html>
+<title>Python track</title>
+<body>
 <center>
 	<h1>Welcome to ITI Python track webapplication</h1>
 </center>
+</body>
+</html>
